--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bip21": "Bitcoin-com/bip21",
     "bip32-utils": "Bitcoin-com/bip32-utils#0.13.0",
     "bip38": "^2.0.2",
-    "bip39": "^2.5.0",
+    "bip39-english": "^2.5.0",
     "bip66": "^1.1.5",
     "bc-bip68": "^1.0.5",
     "bitcoin-ops": "Bitcoin-com/bitcoincash-ops#1.5.0",
